--- a/win-rt-rgb/AudioCapture/AudioCapture.vcxproj
+++ b/win-rt-rgb/AudioCapture/AudioCapture.vcxproj
@@ -220,7 +220,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AudioHandler.cpp" />
     <ClCompile Include="AudioMonitor.cpp" />
     <ClCompile Include="AudioSink.cpp" />
     <ClCompile Include="EnergyAudioHandler.cpp" />
@@ -229,7 +228,7 @@
     <ClInclude Include="AudioHandler.h" />
     <ClInclude Include="AudioMonitor.h" />
     <ClInclude Include="dsp\ExpFilter.h" />
-    <ClInclude Include="RingBuffer.h" />
+    <ClInclude Include="fftw3.h" />
     <ClInclude Include="SseUtils.h" />
     <ClInclude Include="AudioSink.h" />
     <ClInclude Include="EnergyAudioHandler.h" />
