--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -40,7 +40,7 @@
     "npm-run-all": "^4.1.5",
     "style-loader": "^1.2.1",
     "typescript": "^3.9.5",
-    "wait-on": "^5.0.1",
+    "wait-on": "^5.2.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
@@ -52,6 +52,7 @@
     "core-js": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-region-select": "^2.3.0",
     "regenerator-runtime": "^0.13.7",
     "styled-components": "^5.1.1"
   },
