--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -40,6 +40,7 @@
     "npm-run-all": "^4.1.5",
     "style-loader": "^1.2.1",
     "typescript": "^3.9.5",
+    "url-loader": "^4.1.1",
     "wait-on": "^5.2.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
@@ -50,6 +51,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "core-js": "^3.6.5",
+    "fontsource-roboto": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-region-select": "^2.3.0",
